[gd_scene load_steps=5 format=3 uid="uid://b2d6v2gar3raa"]

[ext_resource type="MeshLibrary" uid="uid://blsb1ottgv77w" path="res://TileWorld/Tiles/VisibleBlocks/base_block.tres" id="1_1fx3s"]
[ext_resource type="Script" path="res://grid_map.gd" id="2_js2qe"]
[ext_resource type="MeshLibrary" uid="uid://v323yiokpytu" path="res://TileWorld/Tiles/Borders/border.tres" id="3_2ujc0"]
[ext_resource type="MeshLibrary" uid="uid://0gdkm1xe0r8a" path="res://TileWorld/Tiles/Highlighters/HighlightTiles2.tres" id="3_jvci0"]

[node name="BattleMap" type="GridMap"]
mesh_library = ExtResource("1_1fx3s")
cell_size = Vector3(1, 1, 1)
collision_layer = 0
collision_mask = 0
data = {
"cells": PackedInt32Array(65535, 0, 0, 65534, 0, 0, 65534, 65535, 0, 0, 1, 0, 65535, 1, 0, 65534, 1, 0, 65534, 65534, 0, 1, 65535, 0, 1, 0, 0, 1, 1, 0, 65535, 65535, 0, 65535, 65534, 0, 0, 65535, 0, 0, 65534, 0, 0, 0, 0, 1, 65534, 0, 65534, 65533, 0, 65533, 65534, 0, 65533, 65535, 0, 65533, 0, 0, 65533, 1, 0, 65533, 2, 0, 1, 2, 0, 0, 2, 0, 65534, 2, 0, 65535, 65533, 0, 65535, 2, 0, 65533, 65533, 0, 2, 65533, 0, 1, 65533, 0, 0, 65533, 0, 2, 65535, 0, 2, 0, 0, 2, 1, 0, 2, 65534, 0, 2, 2, 0, 65538, 65532, 0, 65537, 65532, 0, 65536, 65532, 0, 131071, 65532, 0, 131070, 65532, 0, 131069, 65532, 0, 65539, 65533, 0, 65539, 65534, 0, 65539, 65535, 0, 131072, 65532, 0, 196608, 65532, 0, 262144, 65532, 0, 327680, 65532, 0, 393216, 65532, 0, 458752, 65532, 0, 524288, 65532, 0, 589824, 65532, 0, 655360, 65532, 0, 720896, 65532, 0, 196608, 0, 0, 196609, 0, 0, 196609, 1, 0, 196608, 1, 0, 262143, 1, 0, 262143, 0, 0, 262143, 65535, 0, 196608, 65535, 0, 196609, 65535, 0, 3, 0, 0, 3, 2, 0, 3, 3, 0, 3, 1, 0, 2, 3, 0, 2, 4, 0, 1, 4, 0, 0, 4, 0, 65535, 4, 0, 65535, 3, 0, 65534, 3, 0, 65533, 3, 0, 0, 3, 0, 1, 3, 0, 65534, 4, 0, 65533, 4, 0, 3, 4, 0, 786432, 65532, 0)
}
script = ExtResource("2_js2qe")
metadata/_editor_floor_ = Vector3(0, 0, 0)

[node name="BorderMap" type="GridMap" parent="."]
mesh_library = ExtResource("3_2ujc0")
cell_size = Vector3(1, 1, 1)
collision_layer = 0
collision_mask = 0
metadata/_editor_floor_ = Vector3(0, 1, 0)

[node name="HoverHighlight" type="GridMap" parent="."]
mesh_library = ExtResource("3_jvci0")
cell_size = Vector3(1, 1, 1)
cell_center_y = false
collision_layer = 0
collision_mask = 0
metadata/_editor_floor_ = Vector3(0, 2, 0)

[node name="MoveHighlight" type="GridMap" parent="."]
mesh_library = ExtResource("3_jvci0")
cell_size = Vector3(1, 1, 1)
cell_center_y = false
collision_layer = 0
collision_mask = 0
metadata/_editor_floor_ = Vector3(0, 1, 0)

[node name="OmniLight3D" type="OmniLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 6, 0)
omni_range = 10.0
